<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="56dp"

                android:text="@string/textAutoDiagnosis"
                tools:textSize="34sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:text="@string/textQuery03"
                tools:textSize="20sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/checkBox00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice00" />

            <CheckBox
                android:id="@+id/checkBox01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice01" />

            <CheckBox
                android:id="@+id/checkBox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice02" />

            <CheckBox
                android:id="@+id/checkBox03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice03" />

            <CheckBox
                android:id="@+id/checkBox04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice04" />

            <CheckBox
                android:id="@+id/checkBox05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice05" />

            <CheckBox
                android:id="@+id/checkBox06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textChoice06" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnAcceptForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickSend"
                    android:text="@string/button_accept" />

                <Button
                    android:id="@+id/btnCancelForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/buttonCancelForm" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>