<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertCovidActivity">

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="672dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="384dp"
                android:layout_height="219dp"
                android:layout_marginStart="16dp"
                android:text="@string/alertCovid_1"

                app:layout_constraintEnd_toEndOf="parent"
                tools:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="384dp"
                android:layout_height="79dp"
                android:layout_marginStart="16dp"

                android:text="@string/alertCovid_2"
                app:layout_constraintEnd_toEndOf="parent"
                tools:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="384dp"
                android:layout_height="138dp"
                android:layout_marginStart="16dp"

                android:text="@string/alertCovid_3"
                app:layout_constraintEnd_toEndOf="parent"
                tools:textSize="16sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/buttonCodidBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickAccept"
                android:text="@string/button_accept" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>